# zer0bin

./: .gitignore  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cartograph.md  LICENSE  README.md  config.example.json  default.nginx  docker-compose.yml  example.nginx  package.json  schema.sql
.github/ISSUE_TEMPLATE/: 01_bug-report.md  02_feature-request.md  03_public_instance.md
backend/: .prettierrc.json  Cargo.toml  Dockerfile  config.example.json  schema.sql
backend/migrations/: 000_create_pastes.sq  000_create_pastes.sql  000_init.sql  000_single_view.sql  001_second.sql
backend/src/: config.rs  main.rs  models.rs  routes.rs
frontend/: .env  .htmlnanorc  .parcelrc  .prettierrc.json  Dockerfile  config.example.json  icons.ts  index.html  index.js  index.pug  index.ts  package-lock.json  package.json  styles.css  vite.config.js  vite.config.ts  webpack.config.js
frontend/.parcel-cache/: 2fc3881870e9181d  636293eaad89690b.txt  73b59e41ad90a83b  82c6365f4b4a63f6  a39519cf176a72e1  aa955e9e36178fa2  lock.mdb
frontend/css/: prism.css  rosepine.min.css  style.css  style.min.css  style.scss
frontend/js/: fontawesome.min.js  highlight.min.js  index.js  index.min.js  prism-live.js  prism.min.js
frontend/min/: highlight.min.js
frontend/src/: env.d.ts  hl.js  icons.js  icons.ts  index.html  index.js  index.ts  styles.css  tsconfig.json
frontend/src/css/: style.css
frontend/src/js/: index.js
frontend/style/: font-fira.scss  font.css  font.scss  style.scss  tooltip.css  tooltip.scss
