[package]
name = "backend"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-rt = "2.6.0"
actix-web = "4.0.0-rc.1"
actix-cors = "0.6.0"
actix-governor = "0.3.0"

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

chrono = { version = "0.4.19", features = ["serde"] }

nanoid = "0.4.0"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
debug-assertions = false

[[bin]]
name = "zer0bin-bin"
path = "src/main.rs"
