[package]
name = "backend"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-rt = "2.7.0"
actix-web = "4.0.1"
actix-cors = "0.6.1"
actix-governor = "0.3.0"

badge-maker = "0.2.1"

sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

chrono = { version = "0.4.19", features = ["serde"] }

nanoid = "0.4.0"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
debug-assertions = false

[[bin]]
name = "zer0bin-bin"
path = "src/main.rs"
